Feature: Add Video Tutorials (#295)
* Update issues.jsonl

* feat(docs): add auto-generated video documentation with captions and voice

Introduces a parallel video-docs system alongside the existing screenshot
docs. VideoDocsE2ETest classes capture frames via Selenium TakesScreenshot,
assemble MP4s with ffmpeg subtitles filter (burned-in captions from inline
description), and optionally add TTS narration via macOS say / espeak-ng
(gated by -Dgenerate.video.voice=true). A new generate-videos Maven profile
and video-docs CI job wire this into the build pipeline. The generate-docs.cjs
script now emits <video> tags for features that have a videoPath in the
manifest.

* fix(video-docs): fix frame capture and ChromeDriver startup reliability

- FrameCaptureSession was tracking frame count and running state in local
  variables that the capture thread updated, while assembleVideo read from
  the session fields (always zero/stale). Thread now references session
  fields directly.
- ChromeDriver creation retries up to 3x on DevToolsActivePort failures,
  which occur transiently on macOS headless Chrome startup.

* fix(video-docs): burn captions via Java2D instead of ffmpeg subtitles filter

The Homebrew ffmpeg build lacks libass/libfreetype so the subtitles= filter
is unavailable. Replaced it with a Java2D pass that paints caption text
directly onto each frame PNG before handing frames to ffmpeg. Also adds
scale+format=yuv420p to the ffmpeg vf chain because libx264 rejects rgb24
input, and drains ffmpeg stdout on a separate thread to avoid pipe-buffer
deadlock.

* Update ignored files.

* Video recording framework, first attempt.

* refactor(video-docs): hook video capture into existing DocsE2ETest lifecycle

Instead of standalone VideoDocsE2ETest classes that duplicated all test
navigation logic, video capture is now embedded in the existing *DocsE2ETest
workflow:

- AbstractDocsE2ETest @BeforeEach/AfterEach start/stop a FrameCaptureSession
  per test, recording the full t